# CMakeParser

./: .gitignore  CMakeLists.txt  CMakeSettings.json
cmake/: functions.cmake  macros.cmake
code/application/: CMakeLists.txt
code/application/CMakeParser/: CMakeLists.txt
code/application/CMakeParser/src/: main.cpp
code/application/CPPParser/: CMakeLists.txt
code/application/CPPParser/include/: getopt.h
code/application/CPPParser/src/: main.cpp
code/application/RegexTester/: CMakeLists.txt
code/application/RegexTester/src/: main.cpp
code/libraries/: CMakeLists.txt
code/libraries/cmake-parser/: CMakeLists.txt
code/libraries/cmake-parser/include/cmake-parser/: CMakeCache.h  CMakeModel.h  CMakeParser.h  Directory.h  DirectoryList.h  DirectoryStack.h  Expression.h  ExpressionLexer.h  Lexer.h  List.h  Parser.h  ParserExceptions.h  Project.h  ProjectList.h  ProjectModel.h  ScriptParser.h  Serialization.h  Target.h  TargetList.h  TypedVariable.h  TypedVariableList.h  Variable.h  VariableList.h
code/libraries/cmake-parser/src/: CMakeCache.cpp  CMakeModel.cpp  CMakeParser.cpp  Directory.cpp  DirectoryList.cpp  DirectoryStack.cpp  Expression.cpp  ExpressionLexer.cpp  Lexer.cpp  List.cpp  Parser.cpp  Project.cpp  ProjectList.cpp  ProjectModel.cpp  ScriptParser.cpp  Serialization.cpp  Target.cpp  TargetList.cpp  TypedVariable.cpp  TypedVariableList.cpp  Variable.cpp  VariableList.cpp
code/libraries/cmake-parser/test/: CMakeLists.txt
code/libraries/cmake-parser/test/src/: CMakeCacheTest.cpp  CMakeModelTest.cpp  CMakeParserTest.cpp  DirectoryListTest.cpp  DirectoryStackTest.cpp  DirectoryTest.cpp  ExpressionTest.cpp  LexerTest.cpp  ListTest.cpp  ParserTest.cpp  ProjectListTest.cpp  ProjectModelTest.cpp  ProjectTest.cpp  ScriptParserTest.cpp  TargetListTest.cpp  TargetTest.cpp  TypedVariableListTest.cpp  TypedVariableTest.cpp  VariableListTest.cpp  VariableTest.cpp  main.cpp
code/libraries/cpp-parser/: CMakeLists.txt
code/libraries/cpp-parser/include/cpp-parser/: Lexer.h  Parser.h
code/libraries/cpp-parser/src/: Lexer.cpp  Parser.cpp
code/libraries/cpp-parser/test/: CMakeLists.txt
code/libraries/cpp-parser/test/src/: LexerTest.cpp  ParserTest.cpp
code/libraries/json-parser/: CMakeLists.txt
code/libraries/json-parser/include/json-parser/: JSONArray.h  JSONBoolean.h  JSONFactory.h  JSONNull.h  JSONNumber.h  JSONObject.h  JSONString.h  JSONValue.h  Lexer.h  Parser.h  json.h
code/libraries/json-parser/src/: JSONArray.cpp  JSONBoolean.cpp  JSONFactory.cpp  JSONNull.cpp  JSONNumber.cpp  JSONObject.cpp  JSONString.cpp  JSONValue.cpp  Lexer.cpp  Parser.cpp
code/libraries/json-parser/test/: CMakeLists.txt
code/libraries/json-parser/test/src/: JSONArrayTest.cpp  JSONBooleanTest.cpp  JSONKVPairTest.cpp  JSONNullTest.cpp  JSONNumberTest.cpp  JSONObjectTest.cpp  JSONStringTest.cpp  LexerTest.cpp  ParserTest.cpp
code/libraries/parser/: CMakeLists.txt
code/libraries/parser/include/parser/: IParserCallback.h  ITokenizer.h  Lexer.h  ParserExecutor.h  Reader.h  SourceLocation.h  StateMachine.h  Token.h  TokenType.h  Tokenizer.h  TokenizerRule.h
code/libraries/parser/src/: Lexer.cpp  Reader.cpp  SourceLocation.cpp  Token.cpp  TokenType.cpp  Tokenizer.cpp  TokenizerRule.cpp
code/libraries/parser/test/: CMakeLists.txt
code/libraries/parser/test/include/: ParserCallbackMock.h
code/libraries/parser/test/src/: LexerTest.cpp  ParserExecutorTest.cpp  ReaderTest.cpp  SourceLocationTest.cpp  StateMachineTest.cpp  TokenTest.cpp  TokenTypeTest.cpp  TokenizerRuleTest.cpp  TokenizerTest.cpp  main.cpp
code/libraries/serialization/: CMakeLists.txt
code/libraries/serialization/include/serialization/: BidirectionalMap.h  EnumSerialization.h  MapUtilities.h
code/libraries/serialization/src/: Deserialization.cpp
code/libraries/serialization/test/: CMakeLists.txt
code/libraries/serialization/test/src/: BidirectionalMapTest.cpp  EnumSerializationTest.cpp  MapUtilitiesTest.cpp  SerializationTest.cpp
code/libraries/test-platform/: CMakeLists.txt
code/libraries/test-platform/include/test-platform/: GoogleMock.h  GoogleTest.h
code/libraries/tracing/: CMakeLists.txt
code/libraries/tracing/include/tracing/: CategorySet.h  ConsoleTraceLineWriter.h  ITraceLineWriter.h  ITraceWriter.h  StringTraceLineWriter.h  TraceCategory.h  TraceWriter.h  Tracing.h
code/libraries/tracing/src/: ConsoleTraceLineWriter.cpp  StringTraceLineWriter.cpp  TraceCategory.cpp  TraceWriter.cpp  Tracing.cpp
code/libraries/tracing/test/: CMakeLists.txt
code/libraries/tracing/test/include/: MockTraceWriter.h
code/libraries/tracing/test/src/: ConsoleTraceLineWriter.cpp  StringTraceLineWriter.cpp  TraceCategoryTest.cpp  TracingTest.cpp  main.cpp
code/libraries/utility/: CMakeLists.txt
code/libraries/utility/include/utility/: CommandLine.h  Console.h  Deserialization.h  FileHandling.h  Format.h  Regex.h  Serialization.h  StringFunctions.h
code/libraries/utility/src/: CommandLine.cpp  Console.cpp  Deserialization.cpp  FileHandling.cpp  Regex.cpp  Serialization.cpp  StringFunctions.cpp
code/libraries/utility/test/: CMakeLists.txt
code/libraries/utility/test/src/: CommandLineTest.cpp  ConsoleTest.cpp  DeserializationTest.cpp  FormatTest.cpp  RegexTest.cpp  SerializationTest.cpp  StringFunctionsTest.cpp  TypeCastTest.cpp
testdata/: CMakeLists.txt  CMakeLists_code.txt  CMakeLists_minimal.txt  CMakeLists_minimal_project.txt  CMakeLists_minimal_project_set.txt  CMakeLists_root.txt  CMakeLists_simpleproject.txt  main.cpp  parser.json
testdata/code/: CMakeLists.txt
testdata/code/applications/serializer/: CMakeLists.txt
testdata/code/libraries/serialization/include/serialization/: Deserialization.h  EnumSerialization.h  Serialization.h
testdata/code/libraries/serialization/src/: Serialization.cpp
testdata/code/libraries/serialization/test/: CMakeLists.txt
testdata/code/libraries/serialization/test/src/: BidirectionalMapTest.cpp  (+1 more)
testdata/minimal_project_message/: CMakeLists.txt
testdata/minimal_project_set/: CMakeLists.txt
testdata/simple_project/: CMakeLists.txt  parser.json
